Criada tela e tabela de relatório

--- a/src/main/webapp/layout.xhtml
+++ b/src/main/webapp/layout.xhtml
@@ -18,7 +18,7 @@
 		<p><p:link value="Bancos" outcome="bank"/></p>
 		<p><p:link value="Clientes" outcome="customer"/></p>
 		<p><p:link value="Propostas" outcome="proposal"/></p>
-		<p><p:link value="Relatório"/></p>
+		<p><p:link value="Relatório" outcome="report"/></p>
 	</div>
 	<div class="content">
 		<ui:insert name="content" />
