--- a/src/main/webapp/customer.xhtml
+++ b/src/main/webapp/customer.xhtml
@@ -46,7 +46,7 @@
 				</p:column>
 				<p:column headerText="nascimento">
 					<h:outputText value="#{customer.birthDate}">
-						<f:convertDateTime type="date" pattern="dd/MM/yyyy"/>
+						<f:convertDateTime type="localDate" pattern="dd/MM/yyyy"/>
 					</h:outputText>
 				</p:column>
 			</p:dataTable>
@@ -70,7 +70,7 @@
 					<p:outputLabel value="Nascimento"/>
 					<p:inputMask size="45" value="#{customerBean.customer.birthDate}"
 						mask="99/99/9999">
-						<f:convertDateTime type="date" pattern="dd/MM/yyyy"/>
+						<f:convertDateTime type="localDate" pattern="dd/MM/yyyy"/>
 					</p:inputMask>
 					
 					<p:commandButton value="Salvar" actionListener="#{customerBean.save}"
