Criada pesquisa por times selecionados no relatório

--- a/src/main/webapp/report.xhtml
+++ b/src/main/webapp/report.xhtml
@@ -16,7 +16,7 @@
 							itemLabel="#{team.name}" itemValue="#{team}"/>
 					</p:selectCheckboxMenu>
 					<p:commandButton value="Buscar" update="reportTable"
-						actionListener="#{reportBean.findProposals}" />
+						actionListener="#{reportBean.find}" />
 				</f:facet>
 			</p:toolbar>
 
