--- a/src/main/webapp/proposal.xhtml
+++ b/src/main/webapp/proposal.xhtml
@@ -38,12 +38,15 @@
 						actionListener="#{proposalBean.initializeUpdate}"
 						oncomplete="PF('proposalDialog').show()" update="proposalDialog"
 						disabled="#{proposalBean.proposal == null}"/>
+					<p:commandButton value="Exportar" icon="pi pi-download">
+						<p:dataExporter type="csv" target="proposalTable" fileName="propostas"/>
+					</p:commandButton>
 				</f:facet>
 			</p:toolbar>
 			
 			<p:dataTable id="proposalTable" value="#{proposalBean.proposalList}"
 				var="proposal" selectionMode="single" selection="#{proposalBean.proposal}"
-				rowKey="#{proposal.id}" lazy="true">
+				rowKey="#{proposal.id}" lazy="false">
 				<p:ajax event="rowSelect" update="contentForm:toolbar"/>
 				<p:ajax event="rowUnselect" update="contentForm:toolbar"/>
 				
