--- a/src/main/webapp/proposal.xhtml
+++ b/src/main/webapp/proposal.xhtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<ui:composition template="layout.xhtml"
+<ui:composition template="/WEB-INF/templates/layout.xhtml"
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="jakarta.faces.html"
 	xmlns:f="jakarta.faces.core"
