--- a/src/main/webapp/proposal.xhtml
+++ b/src/main/webapp/proposal.xhtml
@@ -13,7 +13,8 @@
 				<f:facet name="left">
 					<p:inputText size="20" value="#{proposalBean.searchTerm}"/>
 					<p:selectOneMenu value="#{proposalBean.searchOption}">
-						<f:selectItem itemLabel="Nome funcionário" itemValue="Employee"/>
+						<f:selectItem itemLabel="Nome funcionário" itemValue="Employee"
+							itemDisabled="#{!userUtil.admin}"/>
 						<f:selectItem itemLabel="Código banco" itemValue="Bank"/>
 						<f:selectItem itemLabel="Código proposta" itemValue="Proposal"/>
 					</p:selectOneMenu>
@@ -122,7 +123,7 @@
 					
 					<p:outputLabel value="Funcionário: "/>
 					<p:selectOneMenu value="#{proposalBean.proposal.employee}"
-						converter="employeeConverter">
+						converter="employeeConverter" disabled="#{!userUtil.admin}">
 						<f:selectItems value="#{proposalBean.employeeList}"
 							var="employee" itemLabel="#{employee.name}" itemValue="#{employee}"/>
 					</p:selectOneMenu>
@@ -137,7 +138,8 @@
 					<p:outputLabel value="CPF cliente: "/>
 					<p:inputText size="40" value="#{proposalBean.proposal.customer.cpf}">
 						<p:commandButton icon="pi pi-search" actionListener="#{proposalBean.findCustomer}"
-							update="@form"/>
+							update="@form">
+						</p:commandButton>
 					</p:inputText>
 
 					<p:outputLabel value="Nome cliente: "/>
