Melhorias de estilos das páginas

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,6 +7,9 @@
 	xmlns:p="http://primefaces.org/ui">
 	
 	<ui:define name="content">
-		<p:graphicImage name="abc" library="resources" alt="logo"/>
+		<div style="display: flex; justify-content: center; align-content: center;">
+			<p:graphicImage name="logomarca.png" library="images" alt="logo" width="30%"
+				style="margin: auto; display: block; padding-top:20px;"/>
+		</div>
 	</ui:define>
 </ui:composition>
