--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -4,6 +4,7 @@
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<meta charset="UTF-8" />
+	<h:outputStylesheet library="css" name="login.css"/>
 </h:head>
 <h:body>
 	<h:form>
