--- a/src/main/webapp/report.xhtml
+++ b/src/main/webapp/report.xhtml
@@ -7,6 +7,7 @@
 	xmlns:p="http://primefaces.org/ui">
 	
 	<ui:define name="content">
+		<h3>RELATÓRIO</h3>
 		<h:form>
 			<p:toolbar>
 				<f:facet name="left">
