--- a/src/main/webapp/report.xhtml
+++ b/src/main/webapp/report.xhtml
@@ -9,6 +9,7 @@
 	<ui:define name="content">
 		<h3>RELATÓRIO</h3>
 		<h:form>
+			<p:messages />
 			<p:toolbar id="toolbar">
 				<f:facet name="left">
 					<p:selectCheckboxMenu multiple="true" converter="teamConverter"
