--- a/src/main/webapp/team.xhtml
+++ b/src/main/webapp/team.xhtml
@@ -9,6 +9,7 @@
 	<ui:define name="content">
 		<h3>EQUIPES</h3>
 		<h:form id="contentForm">
+			<p:messages />
 			<p:toolbar id="toolbar">
 				<f:facet name="left">
 					<p:commandButton value="Buscar" icon="pi pi-search" 
