Correção de erros e adição de mensagens de erro

--- a/src/main/webapp/report.xhtml
+++ b/src/main/webapp/report.xhtml
@@ -9,7 +9,10 @@
 	<ui:define name="content">
 		<h3>RELATÓRIO</h3>
 		<h:form>
-			<p:messages />
+			<p:messages globalOnly="true">
+				<p:autoUpdate/>
+			</p:messages>
+			
 			<p:toolbar id="toolbar">
 				<f:facet name="left">
 					<p:selectCheckboxMenu multiple="true" converter="teamConverter"
