--- a/src/main/webapp/bank.xhtml
+++ b/src/main/webapp/bank.xhtml
@@ -9,7 +9,10 @@
 	<ui:define name="content">
 		<h3>BANCOS</h3>
 		<h:form id="contentForm">
-			<p:messages />
+			<p:messages globalOnly="true">
+				<p:autoUpdate/>
+			</p:messages>
+			
 			<p:toolbar id="toolbar">
 				<f:facet name="left">
 					<p:commandButton value="Buscar" icon="pi pi-search"
